--- a/index.html
+++ b/index.html
@@ -8,24 +8,49 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23030303%22/><path d=%22M50 20 L80 35 L80 65 L50 80 L20 65 L20 35 Z%22 fill=%22none%22 stroke=%22%23fbbf24%22 stroke-width=%228%22/><circle cx=%2250%22 cy=%2250%22 r=%2215%22 fill=%22%23fbbf24%22/></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&family=Space+Grotesk:wght@300;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              hive: {
+                dark: '#050505',
+                light: '#fbfbf9',
+                amber: '#f59e0b',
+                cyan: '#22d3ee'
+              }
+            }
+          }
+        }
+      }
+    </script>
     <style>
       :root {
         --color-x: #f59e0b;
         --color-o: #22d3ee;
         --color-bg: #050505;
+        --color-text: #f8fafc;
       }
+      
+      .light {
+        --color-bg: #fbfbf9;
+        --color-text: #1c1917;
+      }
+
       body {
         font-family: 'Outfit', sans-serif;
         background-color: var(--color-bg);
-        color: #f8fafc;
+        color: var(--color-text);
         overflow-x: hidden;
+        transition: background-color 0.5s ease, color 0.5s ease;
       }
       
       ::-webkit-scrollbar {
         width: 4px;
       }
       ::-webkit-scrollbar-track {
-        background: rgba(0,0,0,1);
+        background: transparent;
       }
       ::-webkit-scrollbar-thumb {
         background: linear-gradient(to bottom, var(--color-x), var(--color-o));
@@ -37,16 +62,17 @@
         inset: 0;
         z-index: -2;
         background: 
-          linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px),
-          linear-gradient(0deg, rgba(255,255,255,0.03) 1px, transparent 1px);
+          linear-gradient(90deg, currentColor 1px, transparent 1px),
+          linear-gradient(0deg, currentColor 1px, transparent 1px);
         background-size: 40px 40px;
+        opacity: 0.03;
       }
 
       .hive-hex {
         position: fixed;
         inset: 0;
         z-index: -1;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='56' height='100' viewBox='0 0 56 100'%3E%3Cpath d='M28 66L0 50L0 16L28 0L56 16L56 50L28 66L28 100' fill='none' stroke='%23fbbf24' stroke-opacity='0.03' stroke-width='1'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='56' height='100' viewBox='0 0 56 100'%3E%3Cpath d='M28 66L0 50L0 16L28 0L56 16L56 50L28 66L28 100' fill='none' stroke='currentColor' stroke-opacity='0.05' stroke-width='1'/%3E%3C/svg%3E");
         background-size: 56px 100px;
       }
 
@@ -55,10 +81,10 @@
         width: 100%;
         height: 100px;
         z-index: 5;
-        background: linear-gradient(to bottom, transparent, rgba(251, 191, 36, 0.05), transparent);
-        opacity: 0.5;
+        background: linear-gradient(to bottom, transparent, var(--color-x), transparent);
+        opacity: 0.03;
         pointer-events: none;
-        animation: scan 8s linear infinite;
+        animation: scan 12s linear infinite;
       }
 
       @keyframes scan {
@@ -86,11 +112,19 @@
         height: var(--s);
         left: var(--l);
         bottom: -10px;
-        opacity: 0.3;
+        opacity: 0.15;
       }
 
       @keyframes rise {
         to { transform: translateY(-110vh); opacity: 0; }
+      }
+
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 3px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: currentColor;
+        opacity: 0.2;
       }
     </style>
     <script type="importmap">
@@ -110,7 +144,7 @@
     <div class="scanline"></div>
     <div id="root"></div>
     <script>
-      const colors = ['#f59e0b', '#22d3ee', '#ffffff'];
+      const colors = ['#f59e0b', '#22d3ee', '#888888'];
       for (let i = 0; i < 30; i++) {
         const d = document.createElement('div');
         d.className = 'pollen-dot';
